HISTORY of collective.pwexpiry
==============================

0.11.4 (unreleased)
-------------------

- Nothing changed yet.


0.11.3 (2017-12-06)
-------------------

- Password validation does not raise UnicodeDecodeError if password
  contains non-ascii characters [fRiSi]


0.11.2 (2017-07-31)
-------------------

- Include upgrade step for the whitelist feature
  [frapell]


0.11.1 (2017-07-31)
-------------------

- Re-release
  [frapell]


0.11 (2017-07-31)
-----------------

- Include the ability to whitelist userids so they would not expire nor be locked
  [frapell]


0.10 (2017-02-21)
-----------------

- Product now works on Plone 5
  [enfold-josh]

- Javascript for login popup is only needed for Plone 4
  [frapell]


0.9.1 (2016-05-23)
------------------

- fix rst2html for pypi page [fRiSi]


0.9 (2016-05-23)
----------------

- Change the E-Mail Template to use a customizeable view.
  [pcdummy]

- Fix an encoding problem with usernames in notify_and_expire.
  [pcdummy]

- Fix javascripts with Plone 4.3.8, theres no more "ieversion()" function.
  [pcdummy]

- Fix translations for "password disabled" statusmessage
  (this fixes #11)
  [fRiSi]

- Update german translations.
  [pcdummy]

- Change the notification e-mail to a translated text e-mail.
  [pcdummy]

- Show status message "your account has expired" in login popup.
  [pcdummy]

- Update german translations.
  [pcdummy]

- Do not exipre passwords if `validity_period` is set to 0
  [fRiSi]

- Add password history check (not in last x passwords).
  [pcdummy]

- Enable the example_validator only when there is a browserlayer.
  [pcdummy]

- Add a skins layer and remove the confusing > 5 chars message from
  pwreset_form.
  [pcdummy]

- Update german translations and translate example_validator.
  [pcdummy]


0.8.1 (2015-05-06)
------------------

- Template typo
  [frapell]

- Update italian translation
  [giacomos]


0.8 (2015-04-20)
----------------

- Update translations
  [frapell]
