@@ -4,7 +4,8 @@ HISTORY of collective.pwexpiry
 0.11.4 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Refactor the notify_and_expire script so it can be added as a zopectl command
+  [frapell]
 
 
 0.11.3 (2017-12-06)
